2002-08-23  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (read_am_file): File computation of path to
	included file, when $(top_srcdir) is not used.
	* tests/include2.test: Augment.

2002-08-22  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (set_strictness): Never enable 'portability'
	warnings for now.
	(usage): Adjust `-Wportability' doc.
	* automake.texi (Invoking Automake): Likewise.
	Suggested by Ralf Corsepius.

2002-08-21  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* lib/am/ltlib.am (clean-%DIR%LTLIBRARIES): Fix cleanup of
	so_location files in current directory.

	Fix for PR automake/346:
	* automake.texi (Optional): Supress the documentation for
	AC_PATH_XTRA, AC_FUNC_ALLOCA, AC_FUNC_ERROR_AT_LINE, AC_FUNC_FNMATCH,
	AC_FUNC_GETLOADAVG, AC_FUNC_MEMCMP, AC_FUNC_MKTIME, AC_FUNC_OBSTACK,
	AC_FUNC_STRTOD, AC_REPLACE_FUNCS, AC_REPLACE_GNU_GETOPT,
	AC_STRUCT_ST_BLOCKS, AM_WITH_REGEX, AC_CHECK_TOOL, AC_CHECK_PROG,
	AC_CHECK_PROGS, AC_PATH_PROG, and AC_PATH_PROGS.  Augment the
	documentation of AC_LIBSOURCE and AC_SUBST to explain this
	applies to any macro that calls them.

2002-08-19  Tom Tromey  <tromey@redhat.com>

	For PR automake/348:
	* tests/Makefile.am (TESTS): Added include2.test.
	* tests/include2.test: New file.
	* tests/include.test: Check to make sure include file is
	distributed.
	* automake.in (read_am_file): Distribute included files.

2002-08-19  Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for PR automake/345:
	* tests/defs: Add support for required=non-root, stolen
	from fileutils'	test suite.
	* tests/destdir.test: Use required=non-root.

	* tests/vtexi.test: Fix spurious failure introduced on 2002-07-30.

2002-08-17  Tom Tromey  <tromey@redhat.com>

	For PR automake/347:
	* automake.in (rule_define): Given portability warning if "%" seen
	in target name.
	(TARGET_PATTERN): Added `%'.
	* tests/Makefile.am (TESTS): Added percent.test.
	* tests/percent.test: New file.

2002-08-15  Art Haas  <ahaas@neosoft.com>
