@@ -1,5 +1,12 @@
 2002-08-23  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* lib/Automake/Channels.pm (buffering, backlog): New variables.
+	(buffer_messages, flush_messages): New functions.
+	(@EXPORT): Add buffer_messages and flush_messages.
+	* automake.in (generate_makefile): Call buffer_messages and
+	flush_messages to buffer warnings until AUTOMAKE_OPTIONS has
+	been read.
+
 	* automake.in (read_am_file): File computation of path to
 	included file, when $(top_srcdir) is not used.
 	* tests/include2.test: Augment.
